<resources>
    <string name="app_name">Whatsapp</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="signin_failed">"signin failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="or_signin_with">Or signin with</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="hello_there_nwelcome_to_you">Hello there!\nwelcome to you</string>
    <string name="password">Password</string>
    <string name="email">example@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
