<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignupActivity.SignupActivity">

    <LinearLayout
        android:id="@+id/signup_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/signup_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:scaleType="centerCrop"
                    android:src="@drawable/splash" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="?actionBarSize"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/hello_there_nwelcome_to_you"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_margin="20dp"
                    android:background="@drawable/inputs"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="#fff"
                    android:textColorHint="#80EEEEEE"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/gmail"
                    android:drawablePadding="5dp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_margin="20dp"
                    android:background="@drawable/inputs"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="#fff"
                    android:textColorHint="#80EEEEEE"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="5dp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/signup_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_buttons"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/sign_up"
                    android:textColor="#D5403F3F"
                    android:textStyle="bold" />


            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/already_have_an_account"
                android:textColor="#D5403F3F"
                android:textSize="15dp" />

            <Button
                android:id="@+id/signup_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/stroke_button"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:text="@string/sign_in"
                android:textColor="#D5403F3F"
                android:textStyle="bold">

            </Button>

        </LinearLayout>


    </LinearLayout>

</ScrollView>