<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.SignupActivity.SignupActivity">

    <LinearLayout
        android:id="@+id/signin_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/signin_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:scaleType="centerCrop"
                    android:src="@drawable/splash" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="?actionBarSize"
                    android:layout_marginBottom="20dp"
                    android:text="@string/hello_there_nwelcome_to_you"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signin_email"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_margin="20dp"
                    android:background="@drawable/inputs"
                    android:drawableLeft="@drawable/gmail"
                    android:drawablePadding="5dp"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="#fff"
                    android:textColorHint="#80EEEEEE"
                    android:textSize="17sp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/signin_password"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_margin="20dp"
                    android:background="@drawable/inputs"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="#fff"
                    android:textColorHint="#80EEEEEE"
                    android:textSize="17sp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/signin_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_buttons"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/sign_in"
                    android:textColor="#777" />

                <TextView
                    android:id="@+id/signin_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Forgot Password?"
                    android:textColor="#fff"
                    android:textDirection="ltr"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Don't have an account? "
                    android:textColor="#777" />

                <TextView
                    android:id="@+id/signin_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/signup"
                    android:textColor="#006257"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/signin_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/or_signin_with" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/signin_signin_with_mobile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/mobile"
                    android:contentDescription="@string/mobile_number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/mobile_number"
                    android:textSize="10sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>
